# potentials

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml
potentials/: __init__.py  base.py  forward_model.py  transformations.py  utils.py
potentials/benchmarks/: __init__.py
potentials/real/: __init__.py  basketball.py  biochemical_oxygen_demand.py  eight_schools.py  german_credit.py  item_response.py  predator_prey.py  radon.py  stochastic_volatility.py
potentials/synthetic/: banana.py  bridge.py  double_well.py  ebm.py  funana.py  funnel.py  gaussian_mixture.py  lorenz.py  mixture.py  multimodal.py  multimodal_conditionals.py  phi4.py  rosenbrock.py  shell.py  student.py  unpreconditionable.py
potentials/test/: test_basic.py  test_cuda.py  test_diagonal_gaussian.py  test_funnel.py  test_simple_event_shape_potentials.py
potentials/true_moments/: biochemical_oxygen_demand_moments.pt  eight_schools_moments.pt  german_credit_moments.pt  (+14 more)
test/: test_banana.py  test_basic.py  test_biochemical_oxygen_demand.py  test_cuda.py  test_diagonal_gaussian.py  test_full_rank_gaussian.py  test_funana.py  test_german_credit.py  test_phi4.py  test_predator_prey.py  test_rotation_matrix_generator.py  test_student.py  test_valid_precomputed_moments.py
visual_checks/: block_diagonal_gaussian.ipynb  diagonal_gaussian.ipynb  full_rank_gaussian.ipynb  funnel.ipynb  gamma_shells.ipynb  gaussian_exponential_posterior.ipynb  multimodal.ipynb  rosenbrock.ipynb  standard_gaussian.ipynb  synthetic_multimodal_conditional_potentials.ipynb
(+13 files in other folders)
